--- a/src/workload/Cargo.toml
+++ b/src/workload/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 common = {path = "../common"}
+rpc = {path = "../rpc"}
 tokio = { version = "1.0", features = ["full"] }
 tonic = "0.4.3"
 tokio-stream = "0.1.6"
