--- a/src/memory_server/Cargo.toml
+++ b/src/memory_server/Cargo.toml
@@ -1,25 +1,18 @@
 [package]
-name = "server"
+name = "memory_server"
 version = "0.1.0"
 authors = ["wuhao2016 <whaohit@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[[bin]]
-name = "server"
-path = "src/server.rs"
-
-
 [dependencies]
-rpc = {path = "../rpc"}
-common = {path = "../common"}
+rpc = { path = "../rpc" }
 workload = {path = "../workload"}
-memory_server = {path = "../memory_server"}
+common = {path = "../common"}
 tokio = { version = "1.0", features = ["full"] }
 tonic = "0.4.3"
 tokio-stream = "0.1.6"
-tracing = { version = "0.1", features = ["log"] }
-log = "0.4"
-serde = { version = "1", features = ["derive"] }
-serde_yaml = "0.8"
+chrono = "0.4"
+serde = "1.0"
+serde_json = "1.0"
