--- a/src/server/Cargo.toml
+++ b/src/server/Cargo.toml
@@ -10,6 +10,10 @@ edition = "2018"
 name = "server"
 path = "src/server.rs"
 
+[[bin]]
+name = "client"
+path = "src/client.rs"
+
 
 [dependencies]
 rpc = {path = "../rpc"}
