--- a/src/server/Cargo.toml
+++ b/src/server/Cargo.toml
@@ -14,6 +14,10 @@ path = "src/server.rs"
 name = "client"
 path = "src/client.rs"
 
+[[bin]]
+name = "cto"
+path = "src/cto.rs"
+
 
 [dependencies]
 rpc = {path = "../rpc"}
