--- a/src/workload/Cargo.toml
+++ b/src/workload/Cargo.toml
@@ -16,4 +16,4 @@ tracing = { version = "0.1", features = ["log"] }
 log = "0.4"
 serde = { version = "1", features = ["derive"] }
 serde_yaml = "0.8"
-bincode = "1.2"
+serde_json = "1.0"
