--- a/src/server/Cargo.toml
+++ b/src/server/Cargo.toml
@@ -7,15 +7,15 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [[bin]]
-name = "server"
+name = "yuxi_server"
 path = "src/server.rs"
 
 [[bin]]
-name = "client"
+name = "yuxi_client"
 path = "src/client.rs"
 
 [[bin]]
-name = "cto"
+name = "yuxi_cto"
 path = "src/cto.rs"
 
 
